[project]
name = "rag-decision-record"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki Toida", email = "yuki.toidax@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "langchain-community>=0.2.10",
    "langchain-openai>=0.1.13",
    "faiss-cpu>=1.8.0.post1",
    "fastparquet>=2024.5.0",
    "chainlit>=1.3.2",
    "pydantic==2.10.1",
    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_decision_record"]
